[package]
name = "runc-rs"
version = "0.1.0"
authors = ["huangyuhui", "Matrix contributors"]
edition = "2018"

[dependencies]
cgroups-rs = "0.2.4"
unshare = "0.6.0"
clap = "2.33.3"
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
nix = "0.20.0"
libc = "0.2.87"
thiserror = "1.0.24"
once_cell = "1.7.2"
scan_fmt = "0.2.6"
log = "0.4.14"
phf = { version = "0.8.0", features = ["macros"] }
procfs = "0.9.1"
scopeguard = "1.1.0"
caps = "0.5.1"
seccomp-sys = "0.1.1"
systemd = { git = "https://github.com/huanghongxun/rust-systemd" }
